--- a/wp-content/themes/goiteens/assets/scss/main.scss
+++ b/wp-content/themes/goiteens/assets/scss/main.scss
@@ -38,4 +38,4 @@
 @import "layout/page/itmarathon/new-year/index";
 @import "layout/page/new-minecraft/index";
 @import "layout/page/course/child/index";
-
+@import "layout/page/blog/index";
