--- a/wp-content/themes/goiteens/assets/scss/layout/page/blog/_articles-card.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/blog/_articles-card.scss
@@ -1,5 +1,204 @@
-.blog{
-    .articles-card{
+.articles-card {
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0;
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+  a {
+    text-decoration: none;
+  }
+
+  padding-bottom: 60px;
+  @include media_min(sm-min) {
+    padding-bottom: 80px;
+  }
+
+  &_list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 280px 200px 128px 200px;
+    gap: 8px;
+    @include media_min(sm-min) {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: 156px 156px 175px;
+      gap: 12px;
+    }
+    @include media_min(lg-min-m) {
+      grid-template-columns: 482px 286px 370px;
+      grid-template-rows: 87px;
+      gap: 16px;
+    }
+  }
+  &_item {
+    &:nth-child(1) {
+      grid-column: 1 / 3;
+      background-color: #efcedd;
+      @include media_min(sm-min) {
+        grid-row: 1 / 3;
+        grid-column: 1 / 4;
+      }
+      @include media_min(lg-min-m) {
+        grid-row: 1 / 7;
+        grid-column: 1 / 1;
+      }
+
+      & h3 {
+        color: #272d4e;
+        font-weight: 500;
+        font-size: 20px;
+        letter-spacing: 0.06em;
+        margin-bottom: auto;
+
+        @include media_min(lg-min-m) {
+          font-size: 28px;
+          letter-spacing: normal;
+        }
+      }
+
+      & time,
+      & span {
+        font-size: 12px;
+        @include media_min(sm-min) {
+            display:inline-block;
+        }
+        @include media_min(lg-min-m) {
+          font-size: 18px;
+        }
+      }
+    }
+    &:nth-child(2) {
+      background-color: #bfc2ee;
+
+      @include media_min(sm-min) {
+        grid-column: 4 / 7;
+      }
+      @include media_min(lg-min-m) {
+        grid-row: 1 / 4;
+        grid-column: 2 / 2;
+      }
+    }
+    &:nth-child(3) {
+      background-color: #ffedbf;
+
+      grid-column: 2 / 3;
+      @include media_min(sm-min) {
+        grid-column: 4 / 7;
+      }
+      @include media_min(lg-min-m) {
+        grid-row: 4 / 7;
+        grid-column: 2 / 2;
+      }
+    }
+    &:nth-child(4) {
+      background-color: #ffd56a;
+
+      grid-column: 1 / 3;
+      @include media_min(sm-min) {
+        grid-column: 1 / 3;
+      }
+      @include media_min(lg-min-m) {
+        grid-row: 1 / 3;
+        grid-column: 3 / 3;
+      }
+    }
+    &:nth-child(5) {
+      background-color: #efcedd;
+      @include media_min(sm-min) {
+        grid-column: 3 / 5;
+      }
+      @include media_min(lg-min-m) {
+        grid-row: 3 / 5;
+        grid-column: 3 / 3;
+      }
+    }
+    &:nth-child(6) {
+      background-color: #f9df8a;
+
+      grid-column: 2 / 3;
+      @include media_min(sm-min) {
+        grid-column: 5 / 7;
+      }
+      @include media_min(lg-min-m) {
+        grid-row: 5 / 7;
+        grid-column: 3 / 3;
+      }
+    }
+  }
+
+  &_link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 12px 16px;
+    @include media_min(sm-min) {
+      padding: 16px;
+    }
+    @include media_min(lg-min-m) {
+      padding: 24px;
+    }
+
+    & > p {
+      color: #272d4e;
+      font-size: 12px;
+      margin-bottom: 17px;
+      @include media_min(lg-min-m) {
+        margin-bottom: 20px;
+        font-size: 14px;
+      }
+    }
+    & > h3 {
+      color: #272d4e;
+      font-weight: 500;
+      font-size: 14px;
+      margin-bottom: auto;
+      @include media_min(sm-min) {
+        font-size: 16px;
+      }
+      @include media_min(lg-min-m) {
+        font-size: 20px;
+      }
+    }
+    & > div{
+           display: flex;
+    
+    & > time,
+    & > span {
+      color: #272d4e;
+      font-size: 10px;
+     
+      @include media_min(sm-min) {
+        font-size: 12px;
+        
+        
+      }
+      @include media_min(lg-min-m) {
+        font-size: 14px;
+      }
+    }
+    & > time{
+        margin-right: auto;
+
+    }
+    & > span {
+        min-width: 20px;
         
     }
+  }
+}
 }
