--- a/wp-content/themes/goiteens/assets/scss/layout/page/blog/_container.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/blog/_container.scss
@@ -1,5 +1,25 @@
-.blog{
-    .container{
-        
+.blog {
+  .container {
+      width: 100%;
+      margin-right: auto;
+      margin-left: auto;
+      padding-right: 20px;
+      padding-left: 20px;
+
+      @include media_min(xs-min) {
+        max-width: 480px;
+        padding-right: 20px;
+        padding-left: 20px;
+      }
+      @include media_min(sm-min) {
+        max-width: 768px;
+        padding-right: 32px;
+        padding-left: 32px;
+      }
+      @include media_min(lg-min-m) {
+        max-width: 1280px;
+        padding-right: 55px;
+        padding-left: 55px;
+      }
     }
-}
+  }
