--- a/wp-content/themes/goiteens/assets/scss/layout/page/blog/_popular.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/blog/_popular.scss
@@ -1,5 +1,176 @@
-.blog{
-    .popular{
-        
+.popular {
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0;
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+  a {
+    text-decoration: none;
+  }
+
+  @include media_min(lg-min-m) {
+    padding-top: 64px;
+    padding-bottom: 64px;
+  }
+  &-title {
+    margin-bottom: 20px;
+    letter-spacing: 0.06em;
+
+    @include media_min(sm-min) {
+      margin-bottom: 36px;
+      letter-spacing: 0em;
     }
+  }
+  &-list {
+    @include media_min(lg-min-m) {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      margin-bottom: 48px;
+    }
+  }
+  & li {
+    position: relative;
+    margin: 0 auto;
+    max-width: 280px;
+    box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
+
+    @include media_min(sm-min) {
+      min-width: 374px;
+    }
+    @include media_min(lg-min-m) {
+      margin: 0;
+      min-width: 370px;
+    }
+
+    &:not(last-child) {
+      margin-bottom: 40px;
+
+      @include media_min(sm-min) {
+        margin-bottom: 32px;
+      }
+      @include media_min(lg-min-m) {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  &-image {
+    width: 100%;
+  }
+  &-label {
+    text-align: center;
+    min-width: 122px;
+    position: absolute;
+    top: 12px;
+    left: 16px;
+    display: inline-block;
+    background-color: #ffffff;
+    border-radius: 15px;
+    padding: 8px 15px;
+    color: #a04ca1;
+    font-weight: 500;
+
+    @include media_min(sm-min) {
+      top: 24px;
+      left: 24px;
+      font-size: 16px;
+      line-height: 1.25;
+      letter-spacing: -0.02em;
+      min-width: 188px;
+    }
+  }
+
+  &-description {
+    background-color: #ffffff;
+    padding: 20px 20px 30px 20px;
+
+    @include media_min(sm-min) {
+      min-height: 372px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 40px 20px 36px;
+    }
+
+    &__title {
+      max-width: 195px;
+      line-height: 1.1;
+
+      @include media(sm-max) {
+        margin-bottom: 8px;
+      }
+      @include media_min(sm-min) {
+        font-size: 22px;
+        line-height: 1.45;
+        max-width: 320px;
+      }
+    }
+    &__text {
+      max-width: 215px;
+
+      @include media(sm-max) {
+        margin-bottom: 16px;
+      }
+      @include media_min(sm-min) {
+        font-size: 18px;
+        line-height: 1.33;
+        max-width: 300px;
+      }
+    }
+    &__link {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.79;
+      color: #a04ca1;
+
+      @include media_min(sm-min) {
+        font-size: 18px;
+        line-height: 1.39;
+      }
+    }
+  }
+  &-button {
+    cursor: pointer;
+    color: #272d4e;
+    font-size: 500;
+    display: block;
+    margin: 0 auto;
+    border: 1px solid #272d4e;
+    border-radius: 60px;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    max-width: 200px;
+    transition: border, 150ms linear, color 150ms linear;
+
+    &:hover,
+    &:focus {
+      border-color: #c51d8e;
+      color: #c51d8e;
+    }
+    @include media_min(sm-min) {
+      display: block;
+      max-width: 272px;
+      padding-top: 24px;
+      padding-bottom: 24px;
+    }
+  }
 }
