creaated html structure

--- a/wp-content/themes/goiteens/assets/scss/main.scss
+++ b/wp-content/themes/goiteens/assets/scss/main.scss
@@ -39,3 +39,4 @@
 @import "layout/page/new-minecraft/index";
 @import "layout/page/course/child/index";
 @import "layout/page/minecraft/index";
+@import "layout/page/goiteens-international/index";
