--- a/wp-content/themes/goiteens/assets/scss/base/_variables.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_variables.scss
@@ -8,6 +8,11 @@ $breakpoints: (
         md: 991px,
         lg: 1199px,
         xl: 1279px,
+        xs-min:480px,
+        sm-min:768px,
+        lg-min:1200px,
+        lg-min-m:1280px,
+        sm-max:767.98px,
 
 );
 
