--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_index.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_index.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "container";
 @import "section-title";
+@import "reg-btn";
 @import "form";
 @import "hero";
 @import "goiteens-are";
