--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_section-title.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_section-title.scss
@@ -1,8 +1,26 @@
 .international{
     .section-title{
-        
+        font-size: 24px;
+        margin-bottom: 32px;
+        @include media_min(sm-min){
+            font-size: 36px;
+            margin-bottom: 36px;
+        }
+        @include media_min(lg-min-m){
+            font-size: 40px;
+margin-bottom: 48px;
+        }
         &_hero{
+font-size: 32px;
+margin-bottom: 24px;
+@include media_min(sm-min){
+    font-size: 40px;
+margin-bottom: 36px;
+}
+@include media_min(lg-min-m){
+    font-size: 48px;
 
+}
         }
     }
 }
