--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_students-projects.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_students-projects.scss
@@ -1,5 +1,102 @@
 .international{
     .students-projects{
+        background: linear-gradient(to bottom, rgba(255,255,255,1) 25%, rgba(247,248,252,1) 25%);
+        padding-top: 32px;
+        padding-bottom: 32px;
+        @include media_min(sm-min){
+            background: linear-gradient(to bottom, rgba(255,255,255,1) 38%, rgba(247,248,252,1)38%, rgba(247,248,252,1) 70%, rgba(255,255,255,1) 70%);
+            padding-top: 36px;
+            padding-bottom: 0;
+            
+        }
+        @include media_min(lg-min-m){
+            background: linear-gradient(to bottom, rgba(255,255,255,1) 48%, rgba(247,248,252,1) 48%);
+            padding-top: 48px;
+            padding-bottom: 68px;
+           
+        } 
+        & .section-title{
+            text-align: center;
+        }
+        &_text{
+            font-size: 15px;
+            margin-bottom: 32px;
+            @include media_min(sm-min){
+                font-size: 16px;
+                margin-bottom: 36px;
+                text-align: center;
+            
+            }
+            @include media_min(lg-min-m){
+                font-size: 20px;
+                margin: 0 auto 48px;
+                max-width: 805px;
+               
+            }
+        }
+
+        &_list{
+            max-width: 295px;
+            display: flex;
+          margin: 0 auto;
+            flex-direction: column;
+            gap:32px;
+           
+            @include media_min(sm-min){
+                max-width: 100%;
+                flex-direction: row;
+                justify-content: center;
+            }
+            @include media_min(lg-min-m){
+               gap:112px;
+               
+            } 
+        }
+        &_item{
+            width: 100%;
+           background-color: white;
+            border-radius: 10px;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            @include media_min(sm-min){
+            
+                width: 30%;
+               
+            }
+            @include media_min(lg-min-m){
+               
+                width: 325px;
+               
+            }
+            & div{
+                padding: 14px;
+            }
         
+            & h3{
+
+            font-weight: 700;
+            font-size: 16px;
+            margin-bottom: 25px;
+            @include media_min(sm-min){
+            
+            margin-bottom: 8px;
+            }
+            @include media_min(lg-min-m){
+                margin-bottom: 25px;
+                font-size: 20px;
+               
+            }
+        }
+& > p{
+    font-size: 15px;
+    @include media_min(sm-min){
+          font-size: 14px;  
+    }
+}
+        }
+        // &_img{
+        //     // width: 79px;
+        //     height: 236px;
+            
+        // }
     }
 }
